--- a/ECS8th2018_2019/postcard/main.css
+++ b/ECS8th2018_2019/postcard/main.css
@@ -143,7 +143,7 @@ a:hover {
   }
   /* line 150, /Users/josh/Documents/workspace/CodeAvengers/src/main/webapp/less/postcard.less */
   section:nth-of-type(2) {
-    background-image: url(/images/postcard/stamp0.png);
+    background-image: url(https://codeavengers.com/images/postcard/stamp0.png);
     background-position: 200px 20px;
     background-repeat: no-repeat;
     background-size: 130px 130px;
